# trl

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  HOWITWORKS.md  INTENT.md  build.rs  check.sh  dev-index.html  editor_export.txt  editor_save.txt  gen_gamma_station.py  index.html  libspawnable.rlib  run-wasm.sh  spryte.py
.cargo/: config.toml
.github/workflows/: itch.yml  pages.yml
assets/prefabs/: gamma station.txt  lava_planet.txt  space_station.txt  starter_planet_surface.txt
assets/shaders/: ccl.wgsl  display.wgsl  outline.wgsl  recolor.wgsl  scanlines.wgsl  shadow.wgsl
docs/plans/: 2026-01-28-spawnable-macro-design.md  2026-01-28-spawnable-macro-impl.md  (+1 more)
editor_saves/: bigundergroundplace.txt  editor_save_1779623599424.txt  editor_save_1779623652207.txt  editor_save_1779626386900.txt  editor_save_1779637849486.txt  editor_save_1779641178865.txt  editor_save_1779643514255.txt  editor_save_1779645925621.txt  editor_save_1779652761129.txt  editor_save_1779758349631.txt  island.txt  lavaplanet.txt  lavaplanetbigger.txt  rocksandriver.txt
scripts/: cargo-run-check.sh  sync_space_qud_sprites.sh
src/: abilities.rs  active_zone.rs  atmosphere.rs  combat.rs  components.rs  crafting.rs  crew.rs  dialogue.rs  docking.rs  editor.rs  entities.rs  faction.rs  galaxy.rs  galaxy_gen.rs  game.rs  level.rs  lib.rs  loot.rs  main.rs  main.rs.bak  map.rs  navigation.rs  outline.rs  particles.rs  path_overlay.rs  post_process.rs  prefabs.rs  quest.rs  recolor.rs  shadow.rs  ship.rs  spawnable.rs  sprites.rs  tile_loader.rs  tiles.rs  ui.rs  utils.rs  world_data.rs  worldgen.rs
tiles/: dragon.sprite  goblin.sprite  player.sprite  slime.sprite
tools/: gen_textures.rs
(+37 files in other folders)
