[package]
name = "trl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trl"
path = "src/main.rs"

[[bin]]
name = "gen_textures"
path = "tools/gen_textures.rs"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
  "bevy_winit",
  "bevy_sprite",
  "bevy_asset",
  "png",
  "x11"
] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
enum-assoc = "1.3.0"
