[package]
name = "trl"
version = "0.1.0"
edition = "2024"
default-run = "trl"

[[bin]]
name = "trl"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18.1" }
rand = "*"
serde = { version = "*", features = ["derive"] }
image = "*"
enum-assoc = "*"
haalka = "*"
noise = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "*", features = ["wasm_js"] }
rust-embed = { version = "*", features = ["debug-embed"] }
