[package]
name = "trl"
version = "0.1.0"
edition = "2024"
default-run = "trl"

[[bin]]
name = "trl"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18.1" }
bevy_hanabi = "0.18"
rand = "*"
serde = { version = "*", features = ["derive"] }
image = "*"
enum-assoc = "*"
haalka = "*"
noise = "*"
bevy_ghx_proc_gen = "0.8.0"

# Optimize dependencies at opt-level 3 even in debug builds; game code stays
# unoptimized so recompiles stay fast but Bevy/rendering is not a bottleneck.
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
rust-embed = { version = "*", features = ["debug-embed"] }
